Extract some code from MatrixLayer (renamed from PuzzleMatrixLayer).

--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -149,11 +149,13 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\GameObject\GameObject.cpp" />
     <ClCompile Include="..\Classes\GameObject\SequentialInvoker.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
-    <ClCompile Include="..\Classes\Script\PuzzleMatrixLayer.cpp" />
+    <ClCompile Include="..\Classes\Script\GetScoreLabel.cpp" />
+    <ClCompile Include="..\Classes\Script\MatrixLayer.cpp" />
     <ClCompile Include="..\Classes\Script\PuzzleScene.cpp" />
     <ClCompile Include="..\Classes\Script\Star.cpp" />
     <ClCompile Include="..\Classes\Script\StarMatrix.cpp" />
     <ClCompile Include="..\Classes\Script\StatusBar.cpp" />
+    <ClCompile Include="..\Classes\Script\StatusLayer.cpp" />
     <ClCompile Include="..\Classes\Script\TitleScene.cpp" />
     <ClCompile Include="..\Classes\LegacyStar.cpp" />
     <ClCompile Include="..\Classes\LegacyStarMatrix.cpp" />
@@ -181,12 +183,14 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\GameObject\SoundPlayer.h" />
     <ClInclude Include="..\Classes\GameObject\SequentialInvoker.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
-    <ClInclude Include="..\Classes\Script\PuzzleMatrixLayer.h" />
+    <ClInclude Include="..\Classes\Script\GetScoreLabel.h" />
+    <ClInclude Include="..\Classes\Script\MatrixLayer.h" />
     <ClInclude Include="..\Classes\Script\PuzzleScene.h" />
     <ClInclude Include="..\Classes\Script\Script.h" />
     <ClInclude Include="..\Classes\Script\Star.h" />
     <ClInclude Include="..\Classes\Script\StarMatrix.h" />
     <ClInclude Include="..\Classes\Script\StatusBar.h" />
+    <ClInclude Include="..\Classes\Script\StatusLayer.h" />
     <ClInclude Include="..\Classes\Script\TitleScene.h" />
     <ClInclude Include="..\Classes\LegacyStar.h" />
     <ClInclude Include="..\Classes\LegacyStarMatrix.h" />
