--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="..\Classes\ComboEffect.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\StarParticle.cpp">
-      <Filter>Classes</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\GameObject\GameObject.cpp">
       <Filter>GameObjectAndComponent</Filter>
     </ClCompile>
@@ -123,6 +120,12 @@
     <ClCompile Include="..\Classes\Script\GameOverLabel.cpp">
       <Filter>Script\PuzzleScene\StatusLayer</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Script\StarParticleEffect.cpp">
+      <Filter>Script\PuzzleScene\MatrixLayer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\StarParticle.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -138,9 +141,6 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ComboEffect.h">
-      <Filter>Classes</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\StarParticle.h">
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\GameObject\GameObject.h">
@@ -232,6 +232,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Script\GameOverLabel.h">
       <Filter>Script\PuzzleScene\StatusLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Script\StarParticleEffect.h">
+      <Filter>Script\PuzzleScene\MatrixLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\StarParticle.h">
+      <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
