--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -137,7 +137,6 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\Audio.cpp" />
-    <ClCompile Include="..\Classes\ComboEffect.cpp" />
     <ClCompile Include="..\Classes\Common\GameData.cpp" />
     <ClCompile Include="..\Classes\Common\SceneStack.cpp" />
     <ClCompile Include="..\Classes\Common\SingletonContainer.cpp" />
@@ -149,6 +148,10 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\GameObject\GameObject.cpp" />
     <ClCompile Include="..\Classes\GameObject\SequentialInvoker.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\LegacyComboEffect.cpp" />
+    <ClCompile Include="..\Classes\LegacyStar.cpp" />
+    <ClCompile Include="..\Classes\LegacyStarMatrix.cpp" />
+    <ClCompile Include="..\Classes\Script\ComboEffect.cpp" />
     <ClCompile Include="..\Classes\Script\GameOverLabel.cpp" />
     <ClCompile Include="..\Classes\Script\GetScoreLabel.cpp" />
     <ClCompile Include="..\Classes\Script\LevelSummaryLabel.cpp" />
@@ -161,15 +164,12 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Script\StatusBar.cpp" />
     <ClCompile Include="..\Classes\Script\StatusLayer.cpp" />
     <ClCompile Include="..\Classes\Script\TitleScene.cpp" />
-    <ClCompile Include="..\Classes\LegacyStar.cpp" />
-    <ClCompile Include="..\Classes\LegacyStarMatrix.cpp" />
     <ClCompile Include="..\Classes\StarParticle.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Audio.h" />
-    <ClInclude Include="..\Classes\ComboEffect.h" />
     <ClInclude Include="..\Classes\Common\GameData.h" />
     <ClInclude Include="..\Classes\Common\IEventListener.h" />
     <ClInclude Include="..\Classes\Common\IUpdateable.h" />
@@ -187,6 +187,10 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\GameObject\SoundPlayer.h" />
     <ClInclude Include="..\Classes\GameObject\SequentialInvoker.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\LegacyComboEffect.h" />
+    <ClInclude Include="..\Classes\LegacyStar.h" />
+    <ClInclude Include="..\Classes\LegacyStarMatrix.h" />
+    <ClInclude Include="..\Classes\Script\ComboEffect.h" />
     <ClInclude Include="..\Classes\Script\GameOverLabel.h" />
     <ClInclude Include="..\Classes\Script\GetScoreLabel.h" />
     <ClInclude Include="..\Classes\Script\LevelSummaryLabel.h" />
@@ -200,8 +204,6 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Script\StatusBar.h" />
     <ClInclude Include="..\Classes\Script\StatusLayer.h" />
     <ClInclude Include="..\Classes\Script\TitleScene.h" />
-    <ClInclude Include="..\Classes\LegacyStar.h" />
-    <ClInclude Include="..\Classes\LegacyStarMatrix.h" />
     <ClInclude Include="..\Classes\StarParticle.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
