--- a/proj.win32/PopStar.vcxproj.filters
+++ b/proj.win32/PopStar.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="..\Classes\Audio.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\ComboEffect.cpp">
-      <Filter>Classes</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\GameObject\GameObject.cpp">
       <Filter>GameObjectAndComponent</Filter>
     </ClCompile>
@@ -75,17 +72,11 @@
     <ClCompile Include="..\Classes\Event\EventDispatcher.cpp">
       <Filter>Event</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\LegacyStarMatrix.cpp">
-      <Filter>Classes</Filter>
-    </ClCompile>
     <ClCompile Include="..\Classes\GameObject\SequentialInvoker.cpp">
       <Filter>GameObjectAndComponent</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Common\GameData.cpp">
       <Filter>Common</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Classes\LegacyStar.cpp">
-      <Filter>Classes</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\Script\TitleScene.cpp">
       <Filter>Script\TitleScene</Filter>
@@ -123,6 +114,18 @@
     <ClCompile Include="..\Classes\Script\StarParticleEffect.cpp">
       <Filter>Script\PuzzleScene\MatrixLayer</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Script\ComboEffect.cpp">
+      <Filter>Script\PuzzleScene\MatrixLayer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\LegacyComboEffect.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\LegacyStar.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\LegacyStarMatrix.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
     <ClCompile Include="..\Classes\StarParticle.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
@@ -138,9 +141,6 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Audio.h">
-      <Filter>Classes</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\ComboEffect.h">
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\GameObject\GameObject.h">
@@ -182,9 +182,6 @@
     <ClInclude Include="..\Classes\Event\EventDispatcher.h">
       <Filter>Event</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\LegacyStarMatrix.h">
-      <Filter>Classes</Filter>
-    </ClInclude>
     <ClInclude Include="..\Classes\Common\IEventListener.h">
       <Filter>Common</Filter>
     </ClInclude>
@@ -196,9 +193,6 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Common\GameData.h">
       <Filter>Common</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Classes\LegacyStar.h">
-      <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Script\TitleScene.h">
       <Filter>Script\TitleScene</Filter>
@@ -235,6 +229,18 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Script\StarParticleEffect.h">
       <Filter>Script\PuzzleScene\MatrixLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Script\ComboEffect.h">
+      <Filter>Script\PuzzleScene\MatrixLayer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\LegacyComboEffect.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\LegacyStar.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\LegacyStarMatrix.h">
+      <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\StarParticle.h">
       <Filter>Classes</Filter>
