--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -141,8 +141,8 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Common\SceneStack.cpp" />
     <ClCompile Include="..\Classes\Common\Object.cpp" />
     <ClCompile Include="..\Classes\Common\Timer.cpp" />
+    <ClCompile Include="..\Classes\Engine\Event\EventDispatcher.cpp" />
     <ClCompile Include="..\Classes\Engine\Utilities\SingletonContainer.cpp" />
-    <ClCompile Include="..\Classes\Event\EventDispatcher.cpp" />
     <ClCompile Include="..\Classes\GameObject\Component.cpp" />
     <ClCompile Include="..\Classes\GameObject\DisplayNode.cpp" />
     <ClCompile Include="..\Classes\GameObject\GameObject.cpp" />
@@ -167,16 +167,16 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Audio.h" />
     <ClInclude Include="..\Classes\Common\GameData.h" />
-    <ClInclude Include="..\Classes\Common\IEventListener.h" />
     <ClInclude Include="..\Classes\Common\IUpdateable.h" />
     <ClInclude Include="..\Classes\Common\SceneStack.h" />
     <ClInclude Include="..\Classes\Common\Timer.h" />
     <ClInclude Include="..\Classes\Common\Object.h" />
+    <ClInclude Include="..\Classes\Engine\Event\Event.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EventArg1.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EventDispatcher.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EventType.h" />
+    <ClInclude Include="..\Classes\Engine\Event\IEventListener.h" />
     <ClInclude Include="..\Classes\Engine\Utilities\SingletonContainer.h" />
-    <ClInclude Include="..\Classes\Event\Event.h" />
-    <ClInclude Include="..\Classes\Event\EventArg1.h" />
-    <ClInclude Include="..\Classes\Event\EventDispatcher.h" />
-    <ClInclude Include="..\Classes\Event\EventType.h" />
     <ClInclude Include="..\Classes\GameObject\Component.h" />
     <ClInclude Include="..\Classes\GameObject\DisplayNode.h" />
     <ClInclude Include="..\Classes\GameObject\GameObject.h" />
