--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -171,7 +171,8 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Common\SceneStack.h" />
     <ClInclude Include="..\Classes\Common\Timer.h" />
     <ClInclude Include="..\Classes\Common\Object.h" />
-    <ClInclude Include="..\Classes\Engine\Event\Event.h" />
+    <ClInclude Include="..\Classes\Engine\Event\IEventData.h" />
+    <ClInclude Include="..\Classes\Engine\Event\LegacyEvent.h" />
     <ClInclude Include="..\Classes\Engine\Event\EventArg1.h" />
     <ClInclude Include="..\Classes\Engine\Event\EventDispatcher.h" />
     <ClInclude Include="..\Classes\Engine\Event\EventType.h" />
